--- a/_includes/head.html
+++ b/_includes/head.html
@@ -51,12 +51,12 @@
     }
   </script>
   {% if jekyll.environment == 'production' %}
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-28ZB3FXS8H"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-F959CLRJR0"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-    gtag('config', 'G-28ZB3FXS8H');
+    gtag('config', 'G-F959CLRJR0');
   </script>
   {%- endif -%}
 </head>
