--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,34 +1,46 @@
 <nav>
     <h3 class="nav">
-        <div class="logo">
-            <svg height="30px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
-<style type="text/css">
-	.st0{fill:url(#SVGID_1_);}
-	.st1{fill:url(#SVGID_2_);}
-</style>
-<g>
-	<g>
-		
-			<linearGradient id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="15.16" y1="18.435" x2="47.98" y2="18.435" gradientTransform="matrix(1 0 0 -1 0 50)">
-			<stop  offset="0" style="stop-color:#FFFFFF"/>
-			<stop  offset="1" style="stop-color:#D9E149"/>
-		</linearGradient>
-		<path class="st0" d="M48,15.1V48H36.5V30.3c-5.8,3.8-9.6,10.3-9.6,17.7H15.2c0-14.1,8.9-26.1,21.3-30.7
-			C40.1,15.9,43.9,15.1,48,15.1z"/>
-	</g>
-	<g>
-		
-			<linearGradient id="SVGID_2_" gradientUnits="userSpaceOnUse" x1="1.48" y1="25.265" x2="47.98" y2="25.265" gradientTransform="matrix(1 0 0 -1 0 50)">
-			<stop  offset="0" style="stop-color:#FFFFFF"/>
-			<stop  offset="1" style="stop-color:#D9E149"/>
-		</linearGradient>
-		<path class="st1" d="M48,1.5v11.7c-4,0-7.8,0.7-11.4,1.9c0,0-0.1,0-0.1,0C23,19.9,13.2,32.8,13.2,48H1.5
-			c0-13.8,6.1-26.2,15.6-34.8H2V1.5H48z"/>
-	</g>
-</g>
-</svg>
-             FILE<span>DROP</span><span>SHARE</span></div>
+
+        <a class="logo" href="/">
+            <svg height="30px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 50 50"
+                style="enable-background:new 0 0 50 50;" xml:space="preserve">
+                <style type="text/css">
+                    .st0 {
+                        fill: url(#SVGID_1_);
+                    }
+
+                    .st1 {
+                        fill: url(#SVGID_2_);
+                    }
+                </style>
+                <g>
+                    <g>
+
+                        <linearGradient id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="15.16" y1="18.435" x2="47.98"
+                            y2="18.435" gradientTransform="matrix(1 0 0 -1 0 50)">
+                            <stop offset="0" style="stop-color:#FFFFFF" />
+                            <stop offset="1" style="stop-color:#D9E149" />
+                        </linearGradient>
+                        <path class="st0" d="M48,15.1V48H36.5V30.3c-5.8,3.8-9.6,10.3-9.6,17.7H15.2c0-14.1,8.9-26.1,21.3-30.7
+			C40.1,15.9,43.9,15.1,48,15.1z" />
+                    </g>
+                    <g>
+
+                        <linearGradient id="SVGID_2_" gradientUnits="userSpaceOnUse" x1="1.48" y1="25.265" x2="47.98"
+                            y2="25.265" gradientTransform="matrix(1 0 0 -1 0 50)">
+                            <stop offset="0" style="stop-color:#FFFFFF" />
+                            <stop offset="1" style="stop-color:#D9E149" />
+                        </linearGradient>
+                        <path class="st1" d="M48,1.5v11.7c-4,0-7.8,0.7-11.4,1.9c0,0-0.1,0-0.1,0C23,19.9,13.2,32.8,13.2,48H1.5
+			c0-13.8,6.1-26.2,15.6-34.8H2V1.5H48z" />
+                    </g>
+                </g>
+            </svg>
+            FILE<span>DROP</span><span>SHARE</span>
+        </a>
+
+
         <button id="menuToggle" style="background: none; border: none; color: white; cursor: pointer;">
             ☰
         </button>
@@ -37,14 +49,37 @@
     <div id="sideMenu" class="menu">
         <div class="menu-close" onclick="toggleMenu()">×</div>
         <ul>
+            
             <li>
-                <a href="">Link 1</a>
+                <a href="/iphone-to-windows-file-transfer">Iphone to windows file transfer</a>
             </li>
             <li>
-                <a href="">Link 2</a>
+                <a href="/windows-to-iphone-file-transfer">Windows to iphone file transfer </a>
             </li>
             <li>
-                <a href="">Link 3</a>
+                <a href="/android-to-mac-file-transfer">Android to mac file transfer</a>
+            </li>
+            <li>
+                <a href="/mac-to-android-file-transfer">Mac to android file transfer</a>
+            </li>
+          
+            <li>
+                <a href="/gb-file-transfer">GB file transfer</a>
+            </li>
+
+            <li>
+                <a href="/send-files-online">Send files online</a>
+            </li>
+            <li>
+                <a href="/send-large-files">Send large files</a>
+            </li>
+           
+            <li>
+                <a href="/file-transfer">File Transfer</a>
+            </li>
+           
+            <li>
+                <a href="/file-share">File Share</a>
             </li>
         </ul>
     </div>
