download loader fixed, css bug fix on mobile etc.

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -60,7 +60,7 @@
                     <div class="post-data">
                       <img loading="lazy" src="/favicon.svg" alt="Author Image" width="30px" height="30px" />
                       <div class="post-bio">
-                        <p class="mb-0" style="font-size: 15px">Webzify Staff</p>
+                        <p class="mb-0" style="font-size: 15px">FILEDROPSHARE Staff</p>
                         <span class="post-date" style="color: gray;">{{ post.date | date_to_string }}</span>
                       </div>
                     </div>
