--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -38,7 +38,7 @@
                          </p>
 
                          <p>We appreciate your feedback and suggestions, and our team will
-                            take quick action on them. Thank you for your interest in Webzify!</p>
+                            take quick action on them. Thank you for your interest in FILEDROPSHARE!</p>
                          
                             <br>
 
