logo and device compatible fix

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -19,8 +19,8 @@
 
                         <linearGradient id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="15.16" y1="18.435" x2="47.98"
                             y2="18.435" gradientTransform="matrix(1 0 0 -1 0 50)">
-                            <stop offset="0" style="stop-color:#FFFFFF" />
-                            <stop offset="1" style="stop-color:#D9E149" />
+                            <stop offset="0" style="stop-color:#000000" />
+                            <stop offset="1" style="stop-color:#000000" />
                         </linearGradient>
                         <path class="st0" d="M48,15.1V48H36.5V30.3c-5.8,3.8-9.6,10.3-9.6,17.7H15.2c0-14.1,8.9-26.1,21.3-30.7
 			C40.1,15.9,43.9,15.1,48,15.1z" />
@@ -29,19 +29,19 @@
 
                         <linearGradient id="SVGID_2_" gradientUnits="userSpaceOnUse" x1="1.48" y1="25.265" x2="47.98"
                             y2="25.265" gradientTransform="matrix(1 0 0 -1 0 50)">
-                            <stop offset="0" style="stop-color:#FFFFFF" />
-                            <stop offset="1" style="stop-color:#D9E149" />
+                            <stop offset="0" style="stop-color:#000000" />
+                            <stop offset="1" style="stop-color:#000000" />
                         </linearGradient>
                         <path class="st1" d="M48,1.5v11.7c-4,0-7.8,0.7-11.4,1.9c0,0-0.1,0-0.1,0C23,19.9,13.2,32.8,13.2,48H1.5
 			c0-13.8,6.1-26.2,15.6-34.8H2V1.5H48z" />
                     </g>
                 </g>
             </svg>
-            FILE<span>DROP</span><span>SHARE</span>
+           <span>FILEDROPSHARE</span>
         </a>
 
 
-        <button id="menuToggle" style="background: none; border: none; color: white; cursor: pointer;">
+        <button id="menuToggle" style="background: none; border: none; cursor: pointer;">
             ☰
         </button>
     </h3>
