server update extra code

--- a/_layouts/fileshare.html
+++ b/_layouts/fileshare.html
@@ -5,7 +5,7 @@
 <body>
     {%- include navbar.html -%}
 
-    <div class="file-share-container">
+    <div id="justapiextra_filedropshare" class="file-share-container">
         <h1 class="main-heading">{{pageData.h1}}</h1>
         <h2 class="subtitle">{{pageData.h2}}</h2>
 
